--- a/pom.xml
+++ b/pom.xml
@@ -9,12 +9,21 @@
     <version>1.0-SNAPSHOT</version>
     <name>jersey-spring-graphql-demo</name>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+        <version.surefire.mvn.plugin>3.0.0-M7</version.surefire.mvn.plugin>
+        <version.jersey>2.39.1</version.jersey>
+        <version.graphql-maven-classes-plugin>2.1.1</version.graphql-maven-classes-plugin>
+        <version.junit-jupiter>5.9.1</version.junit-jupiter>
+    </properties>
+
     <dependencyManagement>
         <dependencies>
             <dependency>
                 <groupId>org.glassfish.jersey</groupId>
                 <artifactId>jersey-bom</artifactId>
-                <version>${jersey.version}</version>
+                <version>${version.jersey}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -31,6 +40,12 @@
             <artifactId>jersey-hk2</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.alex079</groupId>
+            <artifactId>graphql-classes-maven-plugin</artifactId>
+            <version>${version.graphql-maven-classes-plugin}</version>
+        </dependency>
+
         <!-- uncomment this to get JSON support:
          <dependency>
             <groupId>org.glassfish.jersey.media</groupId>
@@ -40,7 +55,7 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
-            <version>${junit-jupiter.version}</version>
+            <version>${version.junit-jupiter}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -78,13 +93,44 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M7</version>
             </plugin>
+            <plugin>
+                <groupId>com.github.alex079</groupId>
+                <artifactId>graphql-classes-maven-plugin</artifactId>
+                <version>${version.graphql-maven-classes-plugin}</version>
+                <configuration>
+                    <source>
+                        <includes>
+                            <include>src/main/resources/graphql/schema.graphqls</include>
+                        </includes>
+                    </source>
+                    <outputDirectory>${project.build.directory}/generated-gql-sources/java</outputDirectory>
+                    <generatedAnnotationVersion>1.8</generatedAnnotationVersion>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>forTheBuild</id>
+                        <phase>generate-sources</phase>
+                        <configuration>
+                            <packageName>com.github.bawey.graphqldemo.generated.server</packageName>
+                            <generatedOutputTypes>SCHEMA_TYPES</generatedOutputTypes>
+                        </configuration>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>forTheTest</id>
+                        <phase>generate-test-sources</phase>
+                        <configuration>
+                            <packageName>com.github.bawey.graphqldemo.generated.server</packageName>
+                            <generatedOutputTypes>DEFINED_OPERATIONS</generatedOutputTypes>
+                        </configuration>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
-
-    <properties>
-        <jersey.version>2.39.1</jersey.version>
-        <junit-jupiter.version>5.9.1</junit-jupiter.version>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <surefire.mvn.plugin.version>3.0.0-M7</surefire.mvn.plugin.version>
-    </properties>
 </project>
