--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,18 @@
         </dependency>
 
         <dependency>
+            <groupId>org.glassfish.jersey.ext</groupId>
+            <artifactId>jersey-spring5</artifactId>
+            <version>${version.jersey}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.graphql-java</groupId>
+            <artifactId>graphql-java</artifactId>
+            <version>20.0</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.github.alex079</groupId>
             <artifactId>graphql-classes-maven-plugin</artifactId>
             <version>${version.graphql-maven-classes-plugin}</version>
@@ -57,6 +69,11 @@
             <artifactId>junit-jupiter</artifactId>
             <version>${version.junit-jupiter}</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.26</version>
         </dependency>
     </dependencies>
 
@@ -84,7 +101,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <mainClass>com.github.bawey.graphqldemo.Main</mainClass>
+                    <mainClass>com.github.bawey.graphqldemo.DemoServer</mainClass>
                 </configuration>
             </plugin>
             <plugin>
