--- a/pom.xml
+++ b/pom.xml
@@ -187,8 +187,9 @@
                                     <include>src/test/resources/*.graphql</include>
                                 </includes>
                             </source>
-                            <packageName>com.github.bawey.graphqldemo.generated.server</packageName>
+                            <packageName>com.github.bawey.graphqldemo.generated.client</packageName>
                             <generatedOutputTypes>DEFINED_OPERATIONS</generatedOutputTypes>
+                            <dataObjectEnhancement>BUILDER</dataObjectEnhancement>
                         </configuration>
                         <goals>
                             <goal>generate</goal>
